Logica y vistas para la creacion de usuarios y autorizacion de credenciales

--- a/SistemaVenta.AplicacionWeb/Views/Dashboard/Index.cshtml
+++ b/SistemaVenta.AplicacionWeb/Views/Dashboard/Index.cshtml
@@ -104,7 +104,7 @@
             <!-- Card Body -->
             <div class="card-body">
                 <div class="chart-area" style="height: 350px !important;">
-                    <canvas id="charVentas"></canvas>
+                    <canvas id="chartVentas"></canvas>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
             <!-- Card Body -->
             <div class="card-body">
                 <div class="chart-pie" style="height: 350px !important ;">
-                    <canvas id="charProductos"></canvas>
+                    <canvas id="chartProductos"></canvas>
                 </div>
             </div>
         </div>
@@ -131,10 +131,9 @@
 @section Scripts{
 
     <script src="~/vendor/chart.js/Chart.min.js"></script>
+    <script src="~/js/vistas/DashBoard_Index.js"></script>
 
 <!-- SOLO ES DE EJEMPLO - IGNORAR -->
-    <script src="~/js/vistas/chart-bar-demo.js"></script>
-    <script src="~/js/vistas/chart-pie-demo.js"></script>
 }
 
 
