--- a/SistemaVenta.AplicacionWeb/Views/Shared/_Layout.cshtml
+++ b/SistemaVenta.AplicacionWeb/Views/Shared/_Layout.cshtml
@@ -38,68 +38,68 @@
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
+            @await Component.InvokeAsync("Menu")
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("Index","Dashboard")">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span>
-                </a>
+            @*   <li class="nav-item">
+            <a class="nav-link" href="@Url.Action("Index","DashBoard")">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span></a>
             </li>
-
+            *@
             <!-- Nav Item - Administración Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAdministracion">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Administración</span>
-                </a>
-                <div id="collapseAdministracion" class="collapse" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="@Url.Action("Index","Usuario")">Usuarios</a>
-                        <a class="collapse-item" href="@Url.Action("Index","Negocio")">Negocio</a>
-                    </div>
-                </div>
-            </li>
+            @*     <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAdministracion">
+            <i class="fas fa-fw fa-cog"></i>
+            <span>Administración</span>
+            </a>
+            <div id="collapseAdministracion" class="collapse" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" href="@Url.Action("Index","Usuario")">Usuarios</a>
+            <a class="collapse-item" href="@Url.Action("Index","Negocio")">Negocio</a>
+            </div>
+            </div>
+            </li>*@
 
             <!-- Nav Item - Inventario Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventario">
-                    <i class="fas fa-fw fa-clipboard-list"></i>
-                    <span>Inventario</span>
-                </a>
-                <div id="collapseInventario" class="collapse" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="@Url.Action("Index","Categoria")">Categorias</a>
-                        <a class="collapse-item" href="@Url.Action("Index","Producto")">Productos</a>
-                    </div>
-                </div>
+            @*  <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventario">
+            <i class="fas fa-fw fa-clipboard-list"></i>
+            <span>Inventario</span>
+            </a>
+            <div id="collapseInventario" class="collapse" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" href="@Url.Action("Index","Categoria")">Categorias</a>
+            <a class="collapse-item" href="@Url.Action("Index","Producto")">Productos</a>
+            </div>
+            </div>
             </li>
-
+            *@
             <!-- Nav Item - Venta Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVenta">
-                    <i class="fas fa-fw fa-tags"></i>
-                    <span>Ventas</span>
-                </a>
-                <div id="collapseVenta" class="collapse" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="@Url.Action("NuevaVenta","Venta")">Nueva Venta</a>
-                        <a class="collapse-item" href="@Url.Action("HistorialVenta","Venta")">Historial Venta</a>
-                    </div>
-                </div>
-            </li>
+            @*   <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVenta">
+            <i class="fas fa-fw fa-tags"></i>
+            <span>Ventas</span>
+            </a>
+            <div id="collapseVenta" class="collapse" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" href="@Url.Action("NuevaVenta","Venta")">Nueva Venta</a>
+            <a class="collapse-item" href="@Url.Action("HistorialVenta","Venta")">Historial Venta</a>
+            </div>
+            </div>
+            </li>*@
 
             <!-- Nav Item - Reportes Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseReportes">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Reportes</span>
-                </a>
-                <div id="collapseReportes" class="collapse" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="@Url.Action("Index","Reporte")">Reporte de Ventas</a>
-                    </div>
-                </div>
-            </li>
+            @*<li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseReportes">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Reportes</span>
+            </a>
+            <div id="collapseReportes" class="collapse" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" href="@Url.Action("Index","Reporte")">Reporte de Ventas</a>
+            </div>
+            </div>
+            </li>*@
 
             <!-- Divider -->
             <hr class="sidebar-divider">
@@ -129,28 +129,27 @@
                         <div class="topbar-divider d-none d-sm-block"></div>
 
                         <!-- Nav Item - User Information -->
-                        @*<li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-                                <img class="img-profile rounded-circle"
-                                     src="https://images.unsplash.com/photo-1519648023493-d82b5f8d7b8a?w=300">
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="@Url.Action("Perfil","Home")">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Perfil
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Salir
-                                </a>
-                            </div>
+                        @* <li class="nav-item dropdown no-arrow">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                        <img class="img-profile rounded-circle"
+                        src="https://images.unsplash.com/photo-1519648023493-d82b5f8d7b8a?w=300">
+                        </a>
+                        <!-- Dropdown - User Information -->
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                        aria-labelledby="userDropdown">
+                        <a class="dropdown-item" href="@Url.Action("Perfil","Home")">
+                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Perfil
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Salir
+                        </a>
+                        </div>
                         </li>*@
-
                         @await Component.InvokeAsync("MenuUsuario")
 
                     </ul>
